feat: Implement Sparse Matrix architecture for O(N) memory scalability
- Refactored matrix implementations to use sparse representation
- Added Options parameter to IReader.parse() for configuration
- Implemented force-dense flag for backward compatibility
- Updated all parsers (Nexus, Newick, FASTA, SNP, ML, etc.)
- Fixed compilation errors in test suite
- Memory complexity reduced from O(N²) to O(N) for sparse matrices